<resources>
    <string name="app_name">AndroidFinalProjectCMSC436</string>

    <string name="cool_app_name">Testudo</string>

    <string name="label_amount">Amount</string>
    <string name="amount">$100000.00</string>
    <string name="label_years">Years</string>
    <string name="years">30</string>
    <string name="label_rate">Interest Rate</string>
    <string name="rate">3.5%</string>

    <string name="label_monthly_payment">Monhtly Payment</string>
    <string name="monthly_payment">$449.04</string>
    <string name="label_total_payment">Tatol Payment</string>
    <string name="total_payment">$161654.66</string>
    <string name="modify_data">Modify Datum</string>


    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="thirty">30</string>

    <string name="amountDecimal">100000</string>
    <string name="rateDecimal">0.35</string>
    <string name="done">Done</string>



    <string name="login_name_label">USERNAME : </string>
    <string name="password_label">PASSWORD : </string>
    <string name="login_button_label">LOGIN</string>
    <string name="sign_up_label">SIGN UP</string>
    <string name="username_label">USERNAME : </string>
    <string name="firstname_label">FIRST NAME : </string>
    <string name="middleInitial_label">MIDDLE INITIAL : </string>
    <string name="UID_label">UID : </string>
    <string name="DOB_label">BIRTHDAY : </string>
    <string name="lastname_label">LAST NAME : </string>


    <string name="student_success_logged_in">You Successfully Logged In</string>
    <!--  some Place Holders  -->

    <string name="login_name_placeholder">Enter Username</string>
    <string name="password_text_placeholder">Enter Password</string>
    <string name="username_placeholder">Enter Username </string>
    <string name="firstname_placeholder">Enter Firstname </string>
    <string name="middleInitial_placeholder">Enter Middle Initial </string>
    <string name="UID_placeholder">Enter UID</string>
    <string name="DOB_placeholder">Enter Birthday (YYYY-MM-DD)</string>
    <string name="lastname_placeholder">Enter Lastname</string>


    <!--  Student Dashboard Strings Titles -->
    <string name="dashboard_register_course">Register For A Course</string>
    <string name="dashboard_view_registered_courses">View Registered Courses</string>

    <string name="Course">Course ID: </string>
    <string name="course_placeholder">Ex: CMSC132 </string>
    <string name="percentage_label">Grade Percentage:</string>
    <string name="percentage_placeholder">Ex: 90</string>
    <string name="weight_label">Grade weight: </string>
    <string name="weight_placeholder">Ex: .2</string>
    <string name="title_placeholder">Ex: Assignment 1</string>
    <string name="title_label">Title: </string>
    <string name="dashboard_view_grades">See Your Grades</string>
    <string name="dashboard_goback"> LOG OUT </string>


    <string name="assignment_title_label">Title For this Assignment : </string>

</resources>