<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="@dimen/activity_margin">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/label_years"
    android:text="@string/label_years" />

<RadioGroup
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_toRightOf="@+id/label_years"
    android:layout_alignLeft="@+id/data_rate"
    android:orientation="horizontal"
    >

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ten"
        android:text="@string/ten" />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fifteen"
        android:text="@string/fifteen" />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thirty"
        android:text="@string/thirty"
        android:checked="true"/>

</RadioGroup>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/label_amount"
    android:text="@string/label_amount"
    android:layout_below="@+id/label_years"
    android:layout_marginTop="50dp"/>

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/data_amount"
    android:text="@string/amountDecimal"
    android:layout_alignBottom="@+id/label_amount"
    android:layout_alignLeft="@+id/data_rate"
    android:layout_alignParentRight="true"
    android:layout_toRightOf="@+id/label_amount"
    android:inputType="numberDecimal"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/label_rate"
    android:text="@string/label_rate"
    android:layout_below="@+id/label_amount"
    android:layout_marginTop="50dp"/>

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/data_rate"
    android:text="@string/rateDecimal"
    android:layout_alignBottom="@+id/label_rate"
    android:layout_marginLeft="10dp"
    android:layout_alignParentRight="true"
    android:layout_toRightOf="@+id/label_rate"
    android:inputType="numberDecimal"
    />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="goBack"
    android:layout_centerHorizontal="true"
    android:text="@string/done"
    android:layout_below="@+id/label_rate"
    android:layout_marginTop="50dp"/>

</RelativeLayout>