<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/firstname_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <EditText
            android:id="@+id/firstname_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname_label"></EditText>

        <TextView
            android:id="@+id/middle_initial_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middleInitial_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname_ET"></TextView>

        <EditText
            android:id="@+id/middle_initial_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middleInitial_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middle_initial_label"></EditText>

        <TextView
            android:id="@+id/lastname_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middle_initial_ET"></TextView>

        <EditText
            android:id="@+id/lastname_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastname_label"></EditText>

        <TextView
            android:id="@+id/DOB_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DOB_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastname_ET"></TextView>

        <EditText
            android:id="@+id/DOB_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DOB_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DOB_label"></EditText>

        <TextView
            android:id="@+id/UID_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UID_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DOB_ET"></TextView>

        <EditText
            android:id="@+id/UID_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UID_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UID_label"></EditText>

        <TextView
            android:id="@+id/username_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UID_ET"></TextView>

        <EditText
            android:id="@+id/username_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_label"></EditText>

        <TextView
            android:id="@+id/password_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_ET"></TextView>

        <EditText
            android:id="@+id/password_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_label"></EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:id="@+id/sign_up_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_ET"
            android:layout_marginTop="20dp">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go Back"
            android:id="@+id/go_back_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
            android:layout_marginTop="20dp">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>