<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:text="@string/login_name_label"
            android:padding="10dip" />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/login_name"
            android:text=""
            android:hint="@string/login_name_placeholder"
            />
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:text="@string/password_label"
            android:padding="10dip"

            />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/login_password"
            android:text=""
            android:inputType="textPassword"
            android:hint="@string/password_text_placeholder"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="50dp">
        <Button
            android:id="@+id/login_button"
            android:text="@string/login_button_label"
             />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_marginTop="300dp"
        android:id="@+id/ad" >
    </TableRow>

</TableLayout>