<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/coursename_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Course"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <EditText
            android:id="@+id/course_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_placeholder"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coursename_label"></EditText>

        <TextView
            android:id="@+id/title_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_ET"></TextView>

        <EditText
            android:id="@+id/title_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_placeholder"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_label"></EditText>

        <TextView
            android:id="@+id/weight_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_ET"></TextView>

        <EditText
            android:id="@+id/weight_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_placeholder"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_label"></EditText>

        <TextView
            android:id="@+id/percentage_label"
            style="@style/SignUpLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_ET"></TextView>

        <EditText
            android:id="@+id/percentage_ET"
            style="@style/SignUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/percentage_placeholder"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percentage_label"></EditText>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Grade"
            android:id="@+id/add_grade_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percentage_ET"
            android:layout_marginTop="20dp">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go Back"
            android:id="@+id/go_back_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_grade_button"
            android:layout_marginTop="20dp">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>